Update tools and version to spigot 1.20.1